2006-01-04  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: On Win32, use a relative path to the DLL in the
	server file. (relative to the location of the .server file)
	libbonobo handles this correctly.

2005-12-19  Srinivasa Ragavan <sragavan@novell.com>

	** Fixes bug #246938

	* popup.c: (prepare_properties_and_menu): Moved the 'Ignore Misspelled
	Word' menuitem above the 'Add Word to Dictionary' in the popup menu.
	
2005-10-28  Kaushal Kumar  <kakumar@novell.com>

	* utils.c: Use proper description for test_url_items button.

	Fixes part of bug #264453.

2005-10-28  Kaushal Kumar  <kakumar@novell.com>

	* dialog.c (get_parent_window) 
	* dialog.h (get_parent_window): Removed.

	* properties.c (gtk_html_edit_properties_dialog_new): Set the default 
	for getting the parent window.

	Fixes bug #310959.

2005-10-25  Kaushal Kumar  <kakumar@novell.com>

	* Makefile.am (CLEANFILES): Clean headers generated for Win32 port.

2005-10-14  Kaushal Kumar  <kakumar@novell.com>

	* body.c (body_properties): Remove General category from Page dialog.
	Merge templates under background image section, where it belongs.
	Rename 'Source' to 'Custom'.

	Fixes bug #310964.

2005-09-14  Kaushal Kumar  <kakumar@novell.com>

	* menubar.c (insert_file_dialog): Hig'fy insert file dialog title.

	Patch by: Jai Vikram Singh Verma.
	Fixes bug #246254.

2005-09-14  Kaushal Kumar  <kakumar@novell.com>

	* gtkhtml-editor-properties.glade: Hig'fy insert rule dialog.

	Patch by: Jai Vikram Singh Verma.
	Fixes bug #246248.
 
2005-09-11  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (AM_CFLAGS): Use DATADIRNAME in GNOMELOCALEDIR so it
	works also on systems where message catalogs are in lib/locale,
	not share/locale.

	* cell.c
	* e-html-utils.c
	* table.c: Use g_ascii_strcasecmp() for portability and
	well-definedness instead of strcasecmp(). Ditto for
	g_ascii_strncasecmp() instead of strncasecmp().

	* body.c (entry_changed)
	* cell.c (set_bg_pixmap)
	* image.c (get_location)